<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/my_account"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_account"
            android:tint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_header" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/username"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/purple_500"
            android:background="@drawable/background_color_stroke"
            app:layout_constraintTop_toBottomOf="@+id/iv_user"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_cuisine_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/cuisine_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColorHint="@color/purple_500"
            android:background="@drawable/background_color_stroke"
            app:layout_constraintTop_toBottomOf="@+id/et_user_name"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_dietary_restrictions"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/dietary_restrictions"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColorHint="@color/purple_500"
            android:background="@drawable/background_color_stroke"
            app:layout_constraintTop_toBottomOf="@+id/et_cuisine_type"
            android:layout_marginTop="16dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save"
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:text="@string/save"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/background_rect_theme"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>