<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context="com.sonitech.recipes.fragment.RecipeFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_header"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/purple_500">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cv_search_recipe"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/background_color_stroke"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/cv_header">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_search"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/purple_500" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center_vertical"
                android:hint="@string/search_recipes"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:longClickable="false"
                android:scrollHorizontally="true"
                android:textColor="@color/black"
                android:textColorHint="@color/purple_500"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@+id/iv_search" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/ic_close"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/purple_500" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_search_recipe"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-145dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_data_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/data_not_found"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_header" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>